--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
@@ -19,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "sharp": "^0.33.1",
+    "styled-components": "^6.1.6",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
